Padronização do Código + ResponseModel + IuserRepositor e UserServices para criar métodos

--- a/ApiLogin/appsettings.json
+++ b/ApiLogin/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Eiji;Database=LoginApi;Trusted_Connection=True;"
+    "DefaultConnection": "Server=EIJI;Database=LoginApi;trusted_connection=true; trustservercertificate=true;"
   }
 }
