Criacao dos metodos + Controller dos metodos + conteiners do Docker

--- a/ApiLogin/appsettings.json
+++ b/ApiLogin/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "13461056180865891601519275818562",
+    "Issuer" :  "ApiLogin"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=EIJI;Database=LoginApi;trusted_connection=true; trustservercertificate=true;"
   }
